<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.CurrencyConverterFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/base_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/from_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/base_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:freezesText="false"
                android:inputType="none"
                android:labelFor="@id/base_input_layout" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/swap_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:rotation="90"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_compare_arrows_24"
            android:tint="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/base_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/other_currency_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/to_currency"
            app:layout_constraintEnd_toEndOf="@+id/base_input_layout"
            app:layout_constraintStart_toStartOf="@+id/base_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/swap_btn">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/other_currency_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:freezesText="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/amount"
            app:helperText="@string/defaultAmount"
            app:layout_constraintEnd_toEndOf="@+id/other_currency_input_layout"
            app:layout_constraintStart_toStartOf="@+id/other_currency_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/other_currency_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convert_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:inputType="numberDecimal"
            android:text="@string/convert"
            app:cornerRadius="@dimen/_5sdp"
            android:paddingVertical="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="@+id/other_currency_input_layout"
            app:layout_constraintStart_toStartOf="@+id/other_currency_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/amount_text_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/converted_amount"
            app:layout_constraintEnd_toEndOf="@+id/convert_btn"
            app:layout_constraintStart_toStartOf="@+id/convert_btn"
            app:layout_constraintTop_toBottomOf="@+id/convert_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>